# mcp-sentinel-detection-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  tenants.example.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
examples/: README.md
examples/sigma/: aad_privileged_role_assignment.yml  aad_risky_signin.yml  azure_activity_keyvault_secret_get.yml  failed_logon_burst.yml  linux_sudo_to_root.yml  o365_inbox_rule_creation.yml
examples/sigma/adversarial/: prompt_injection_in_description.yml
src/mcp_sentinel_detection_engine/: __init__.py  audit.py  auth.py  errors.py  sentinel_client.py  server.py  sigma_pipeline.py  terraform_emit.py  tool_context.py  validation.py
src/mcp_sentinel_detection_engine/schemas/: __init__.py  loader.py  sentinel_tables.json
src/mcp_sentinel_detection_engine/tools/: __init__.py  _runtime.py  convert_sigma.py  dry_run.py  emit_terraform.py  validate_kql.py
tests/: conftest.py  test_auth.py  test_examples.py  test_sigma_pipeline.py  test_terraform_emit.py  test_tools.py  test_validation.py
