[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sentinel-detection-engine"
version = "0.1.0"
description = "An MCP server exposing a Sigma → KQL → Microsoft Sentinel Terraform pipeline to Claude and other MCP clients."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "mcp-sentinel-detection-engine contributors" },
]
keywords = ["mcp", "sentinel", "sigma", "kql", "detection-engineering", "security", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "msal>=1.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pysigma>=1.0.0,<2.0.0",
    "pysigma-backend-kusto>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
mcp-sentinel-detection-engine = "mcp_sentinel_detection_engine.server:main"

[project.urls]
Homepage = "https://github.com/MFisher14/mcp-sentinel-detection-engine"
Issues = "https://github.com/MFisher14/mcp-sentinel-detection-engine/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sentinel_detection_engine"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_sentinel_detection_engine/schemas/sentinel_tables.json" = "mcp_sentinel_detection_engine/schemas/sentinel_tables.json"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
    "ASYNC",
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # asserts allowed in tests
    "S105",  # hardcoded password strings allowed in tests
    "S106",  # hardcoded password args allowed in tests
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["msal.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sigma.*"]
ignore_missing_imports = true
follow_imports = "skip"
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["src/mcp_sentinel_detection_engine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
